Doamin, Repository and Services implemented

--- a/OnionArchitecture/appsettings.json
+++ b/OnionArchitecture/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=Lenovo3i;DataBase=OnionArcDB;Trusted_Connection=True;"    
+  }
 }
